fix bug view solution from mail and weight imbalance bug

--- a/GVRP_Entry_client/index.html
+++ b/GVRP_Entry_client/index.html
@@ -433,6 +433,9 @@
               <button class="btn btn-secondary" onclick="openImportModal()">
                 <span>📥</span> Import Orders
               </button>
+              <button class="btn btn-secondary" onclick="OrdersTable.selectAllOrdersInDatabase()">
+                <span>☑️</span> Select All Orders
+              </button>
               <button class="btn btn-success" id="btn-plan-routes"  onclick="openRoutePlanningModal()" disabled>
                 <span>📊</span> Plan Routes
                 <span class="badge" id="selected-count">0</span>
