--- a/GVRP_Entry_client/index.html
+++ b/GVRP_Entry_client/index.html
@@ -347,21 +347,21 @@
       <div class="stats-section">
         <h3 class="section-title">📊 TODAY'S STATS</h3>
         <div class="stats-grid">
-          <div class="stat-card" onclick="OrdersFilters.filterByStatus('SCHEDULED')">
+          <div class="stat-card">
             <div class="stat-number">0</div>
             <div class="stat-label">Scheduled</div>
           </div>
-          <div class="stat-card" onclick="OrdersFilters.filterByStatus('COMPLETED')">
+          <div class="stat-card">
             <div class="stat-number">0</div>
             <div class="stat-label">Completed</div>
           </div>
-          <div class="stat-card" onclick="OrdersFilters.filterByStatus('ALL')">
+          <div class="stat-card">
             <div class="stat-number">0</div>
             <div class="stat-label">Total</div>
           </div>
           <div class="stat-card">
             <div class="stat-number">0</div>
-            <div class="stat-label">Routes</div>
+            <div class="stat-label">Unassigned</div>
           </div>
         </div>
       </div>
